finish my first ever website

--- a/imges/index.html
+++ b/imges/index.html
@@ -6,22 +6,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abdul kadir wesite </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
-    <section>
+    <section class="banner">
           <div class="half-width">
               <h1>Welcome to </h1>
-              <h1><span class="name">Abdul Kadir </span> Website</h1>
+              <h1><span class="orange-highlight">Abdul Kadir </span> Website</h1>
               <h3>World-class professional web developer</h3>
               <p>I’m a web developer. I spend my whole day, practically every day, experimenting with HTML, CSS, and JavaScript; dabbling with Python and Ruby; and inhaling a wide variety of potentially useless information through a few hundred RSS feeds. I build websites that delight and inform. I do it well.</p>
+              <a class="link-button" target="-blank" href="https://www.facebook.com/saymonrafin52347"> HIRE ME </a>
           </div>
 
+
+
        <div class="half-width">
-        <img src="photo1.png" alt="">
+        <img src="picture/photo1.png" alt="">
        </div>
     </section>
+
+
+
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="picture/photo2.png" alt="">
+
+        </div>
+
+
+
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>Become  web developer </h3>
+            <p>I already learned the basic HTML and CSS . I can build any simple websites . <br> I can even teach  my brother how to make a simple websites . My goal to build 12 websites and learn advanceed topics    </p>
+            <a class="link-button" target="-blank" href="">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+    <section class="experience">
+            <h2>Experiences</h2>
+            <div id="full-stack" class="half-width  single-experience">
+                <h2>Full Stack Web developer</h2>
+                <h3 class="orange-highlight">2021-present . pro level web developer</h3>
+                <p>I am full stack web developer I can develop both client and server software. In addition to mastering HTML and CSS, I also knows JavaScript, ASP, Python, or Node</p>
+            </div>
+            <div id="seo" class="half-width single-experience ">
+                <h2>Search Engine Optimization (SEO)</h2>
+                <h3 class="orange-highlight"   >Learner khalid farhan academic course</h3>
+                <p>Hi, I am Professional SEO Expert and Digital Marketer. I am doing this for past 7+ years. I can help you with Keyword Research, ON Page and OFF Page SEO, Technical SEO, WordPress SEO, Social Media Marketing and Search Engine Marketing. I am providing best results for my clients. Let's talk Business!!</p>
+            </div>
+    </section>
+    <footer>
+        <p>
+              
+            ©  Abdul Kadir 2021 all rights reserved.
+        </p>
+    </footer>
 </body>
 </html>
