--- a/imges/index.html
+++ b/imges/index.html
@@ -58,7 +58,7 @@
             <div id="full-stack" class="half-width  single-experience">
                 <h2>Full Stack Web developer</h2>
                 <h3 class="orange-highlight">2021-present . pro level web developer</h3>
-                <p>I am full stack web developer I can develop both client and server software. In addition to mastering HTML and CSS, I also knows JavaScript, ASP, Python, or Node</p>
+                <p>I am full stack web developer I can develop both client and server software. In addition to mastering HTML and CSS, I also knows JavaScript, ASP, Python, or Node and others programming language </p>
             </div>
             <div id="seo" class="half-width single-experience ">
                 <h2>Search Engine Optimization (SEO)</h2>
